Added test to validate OpenNIC, ICANN and DappNode names

--- a/test/build-test/Dockerfile
+++ b/test/build-test/Dockerfile
@@ -1,9 +1,11 @@
 FROM alpine
 
 RUN apk update && \
-    apk add bind-tools
+    apk add --no-cache bind-tools dnsmasq openrc
 
 COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
+RUN rc-update add dnsmasq
+COPY dnsmasq/ /etc
 
 ENTRYPOINT ["/entrypoint.sh"]
