--- a/test/docker-compose-test.yml
+++ b/test/docker-compose-test.yml
@@ -5,9 +5,11 @@ services:
     build: ./build-test
     image: test
     container_name: Test
-    dns: 172.33.1.2
+    dns:
+    - localhost
     networks:
-      - dnpbind_network
+    - dnpbind_network
+
 
 networks:
   dnpbind_network:
