--- a/test/build-test/dnsmasq/dnsmasq.conf
+++ b/test/build-test/dnsmasq/dnsmasq.conf
@@ -1,5 +1,6 @@
 server=/eth/172.33.1.2
-server=/#/192.71.245.208
+server=192.71.245.208
+server=208.67.222.222
 conf-dir=/etc/dnsmasq.d/,*.conf
 user=root
 # solve "dnsmasq: setting capabilities failed: Operation not permitted" 
