--- a/test/build-test/Dockerfile
+++ b/test/build-test/Dockerfile
@@ -1,11 +1,10 @@
 FROM alpine
 
 RUN apk update && \
-    apk add --no-cache bind-tools dnsmasq openrc
+    apk add --no-cache bind-tools dnsmasq
 
 COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
-RUN rc-update add dnsmasq
 COPY dnsmasq/ /etc
 
 ENTRYPOINT ["/entrypoint.sh"]
